Revert "Fix Hero background on mobile"

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -9,10 +9,11 @@
   background-size: cover;
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
   justify-content: center;
   min-height: 100vh;
-  overflow: hidden;
+
+  /* https://stackoverflow.com/questions/51795887/how-to-make-body-take-100-min-height-and-height-as-auto/51796359 */
+  /* overflow: auto; */
 }
 
 .header {
